[package]
name = "steam-deck-inputs"
version = "0.1.0"
authors = ["Jack Baron <jackmbaron@gmail.com>"]
description = "Read raw inputs from the Steam Deck"
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.64"

[dependencies]
bitflags = "1.3.2"
bytes = "1.2.1"
derive-getters = "0.2.0"
